# ouro

./: .gitignore  README.md  debug_tools.py  fix_tools.py  pyproject.toml  requirements.txt
 for_claude/: INSTRUCTIONS.md  SOLUTIONS.md
.cursor/rules/: .debug.mdc  preflight.mdc
digital_being/: README.md  __init__.py  app.py
digital_being/being_agents/: __init__.py  thought_agent.py  triage_agent.py  twitter_agent.py
digital_being/character/: character.json
digital_being/framework/: __init__.py  activity_handlers.py  activity_manager.py  composio_connection.py  composio_integration.py  logging_config.py  schema.py
digital_being/skills/: __init__.py  image_gen.py  x_api.py
digital_being/tools/: __init__.py  custom_activities.py  memory_tools.py  thought_tools.py  twitter_tools.py
digital_being/trash/being_agents/: sifda.py  thought_tools.py
digital_being/trash/framework/: main.py
